Fixes issue with docket number and county showing up correctly

--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -60,7 +60,7 @@
                         <option>Windsor</option>
                     </select><br>
                     Docket Number: <input v-model="group.docketNum" placeholder="Docket Num"><br>
-                    Docket Sheet Num: {{group.docketNum}}<br>
+                    Docket Sheet Number: <input v-model="group.docketSheetNum" placeholder="Docket Num"><br>
                     Alleged Offense Date: <input type="date" v-model="group.allegedOffenseDate" placeholder="Offense Date"><br>
                     Arrest Citation Date: <input type="date" v-model="group.arrestCitationDate" placeholder="Arrest Citation Date"><br>
                     Disposition Date: <input type="date" v-model="group.dispositionDate" placeholder="Disposition Date"><br>
