--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -118,16 +118,17 @@
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Conviction Date</th>
-                                                    <th valign="middle" scope="col">Offense Description</th>
+                                                    <th valign="middle" colspan="2" scope="col">Offense Description</th>
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
-                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple }}</span>
+                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
                                                             <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
-                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}} ({{count.docketNum}} {{count.county | toCountyCode}})</span>
+                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
+                                                        <td class="no-print">{{count.docketNum}} {{count.county | toCountyCode}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -158,16 +159,17 @@
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Date of Dismissal</th>
-                                                    <th valign="middle" scope="col">Charge<span v-if="filing.multipleCounts">s</span></th>
+                                                    <th colspan="2" valign="middle" scope="col">Charge<span v-if="filing.multipleCounts">s</span></th>
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
                                                         <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
                                                             <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
-                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}} ({{count.docketNum}} {{count.county | toCountyCode}})</span>
+                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
+                                                        <td class="no-print">{{count.docketNum}} {{count.county | toCountyCode}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -195,16 +197,17 @@
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Conviction Date</th>
-                                                    <th valign="middle" scope="col">Charge<span v-if="filing.multipleCounts">s</span></th>
+                                                    <th colspan="2" valign="middle" scope="col">Charge<span v-if="filing.multipleCounts">s</span></th>
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
                                                         <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
                                                             <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
-                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}} ({{count.docketNum}} {{count.county | toCountyCode}})</span>
+                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
+                                                        <td class="no-print">{{count.docketNum}} {{count.county | toCountyCode}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -233,19 +236,19 @@
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Conviction Date</th>
-                                                    <th valign="middle" scope="col">Offense Description</th>
+                                                    <th valign="middle" colspan="2" scope="col">Offense Description</th>
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
                                                         <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
                                                             <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.description}}</span>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}} ({{count.docketNum}} {{count.county | toCountyCode}})</span>
                                                             <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
+                                                        <td class="no-print">{{count.docketNum}} {{count.county | toCountyCode}}</td>
                                                     </tr>
                                                 </tbody>
-                                                <!--<tfoot class="footer-space"><tr><td>&nbsp;</td></tr></tfoot>-->
 
                                             </table>
                                             <p>2. Petitioner was under 21 when the crime<span v-if="filing.multipleCounts">s
@@ -274,19 +277,19 @@
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Conviction Date</th>
-                                                    <th valign="middle" scope="col">Offense Description</th>
+                                                    <th valign="middle" colspan="2" scope="col">Offense Description</th>
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
-                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate}}</span>
-                                                            <input class="no-print" v-model="count.dispositionDate">
+                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
+                                                            <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
-                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}} ({{count.docketNum}} {{count.county | toCountyCode}})</span>
+                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
+                                                        <td class="no-print">{{count.docketNum}} {{count.county | toCountyCode}}</td>
                                                     </tr>
                                                 </tbody>
-                                                <!--<tfoot class="footer-space"><tr><td>&nbsp;</td></tr></tfoot>-->
 
                                             </table>
                                             <p>2. At least 10 years have elapsed since the date petitioner successfully completed their sentence.</p>
