Improves layout and UI for edit counts page. Adds navigation back and forth between the petitions and edit page.

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -44,6 +44,7 @@
                         </label>
                         <button v-on:click="printDocument" class="btn btn-primary no-print">Print All</button>
                         <button v-on:click="exportContent" class="btn btn-primary no-print">Export to CSV</button>
+                        <a href="manage-counts.html" class="edit-counts btn btn-primary">Add/Edit Counts <i class="fas fa-edit"></i></a> 
                     </div>
                 </div>
             </div>
