Fixes a spacing issue. Stops dynamically changing the page title globally.

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Filings Page</title>
+    <title>Petitions</title>
     <link href="filings.css" rel="stylesheet" type="text/css">
 
     <!-- jQuery -->
