--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Manage Counts Page</title>
+    <title>Add and Edit Counts</title>
     <link href="filings.css" rel="stylesheet" type="text/css">
 
     <!-- jQuery -->
