--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -53,7 +53,6 @@
               </div>
                 <section class="edit-count" v-for="(group, index) in saved.counts" v-bind:id="group" style="margin:40px;">
                     <h3 class="edit-count__title">Count {{index + 1}}: <span v-if="group.description">{{group.description}}</span></h2>
-
                     <p><b>{{group.docketNum}} {{group.county | toCountyCode}}</b></p>
          
                     <div>
@@ -78,6 +77,8 @@
                         <option>Windsor</option>
                     </select></label>
                     </div>
+                    <label><span>Original Docket Sheet Number</span><input class="form-control" v-model="group.docketSheetNum" placeholder="Docket Num"></label>
+
                     <div><label><span>Alleged Offense Date</span><input class="form-control" type="date" v-model="group.allegedOffenseDate" placeholder="Offense Date"></label>
                     <label><span>Arrest Citation Date</span><input class="form-control" type="date" v-model="group.arrestCitationDate" placeholder="Arrest Citation Date"></label>
                     <label><span>Disposition Date</span><input class="form-control" type="date" v-model="group.dispositionDate" placeholder="Disposition Date"></label></div>
