--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -55,6 +55,7 @@
                 <tbody>
                     <tr>
                         <td>
+                            <section class="no-print disclaimer-message">Verify documents below against docket sheet to confirm information is accurate and complete. <br><a href="disclaimer.html" target="_blank">Terms and Conditions.</a></section>
                             <section v-for="group in filings" v-bind:id="group.county">
                                 <article class="page" v-for="filing in group.filings" v-bind:id="filing.id">
 
