--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -39,8 +39,11 @@
         </div>
         <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts" button.
         </p>
-        <a id="vtCourtsOnlineA" target="_blank" href="https://secure.vermont.gov/vtcdas/user">
+        <a id="vtCourtsOnlineA" class="title-page__link" target="_blank" href="https://secure.vermont.gov/vtcdas/user">
             <p id="vtCourtsOnline"><b>VT Courts Online <i class="fas fa-external-link-alt"></i></b></p>
+        </a>
+        <a target="_blank" href="disclaimer.html" class="title-page__link">
+            <p style="padding-bottom:30px;"><b>Terms &amp; Conditions <i class="fas fa-external-link-alt"></i></b></p>
         </a>
     </div>
 <div class="active-state" v-else>
