--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -38,7 +38,7 @@
                             <input type="checkbox" v-model="settings.groupCounts">
                         </label>
                         <label>Pro Se
-                            <input type="checkbox" v-model="settings.proSe">
+                            <input id='proSeCheckBox' type="checkbox" v-model="settings.proSe">
                         </label>
                         <button id="js-print" class="btn btn-primary no-print">Print All</button>
                         <button id="js-export" class="btn btn-primary no-print">Export to CSV</button>
@@ -96,7 +96,7 @@
                                                     NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}), appearing <span class="italic">pro se</span>, and hereby enters this notice of appearance in the above captioned action.
                                                 </template>
                                                 <template v-else>
-                                                    NOW COMES <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">, by and on behalf of {{petitioner.name}} (DOB: {{petitioner.dob}}), and hereby enters this notice of appearance in the above captioned action.
+                                                    NOW COMES <span class="no-visible">{{settings['attorney']}}</span><input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">, by and on behalf of {{petitioner.name}} (DOB: {{petitioner.dob}}), and hereby enters this notice of appearance in the above captioned action.
                                                 </template>
                                             </p>
                                         </div>
@@ -109,7 +109,7 @@
                                                 </template>
                                                 <template v-else>
                                                     by and through counsel,
-                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to expunge the record of the above-captioned conviction<span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602.</p>
 
                                             <p>1. Petitioner was convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
@@ -150,7 +150,7 @@
                                                 </template>
                                                 <template v-else>
                                                     by and through counsel,
-                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to expunge the record of the following charge<span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7603.</p>
                                             <p>1. Petitioner was charged but never convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
                                             <table class="count-table">
@@ -186,7 +186,7 @@
                                                 </template>
                                                 <template v-else>
                                                     by and through counsel,
-                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                    <span class="no-visible">{{settings['attorney']}}</span><input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to expunge the record of the following
                                                 <span v-if="filing.multipleCounts">charges</span><span v-else>charge</span> pursuant to 13 V.S.A. &sect; 7602(a)(1)(B).</p>
                                                  <p>1. Petitioner was convicted of the following <span v-if="filing.multipleCounts">crimes</span><span v-else>crime</span>:</p>
@@ -224,7 +224,7 @@
                                                 <template v-else>
                                                     by and through counsel,
                                                     <span class="no-visible">{{settings['attorney']}}</span>
-                                                    <input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                    <input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to seal the record of the above-captioned conviction
                                                 <span v-if="filing.multipleCounts">s</span> pursuant to 33 V.S.A. &sect; 5119(g).</p>
                                             <p>1. Petitioner was convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
@@ -265,7 +265,7 @@
                                                 <template v-else>
                                                     by and through counsel,
                                                     <span class="no-visible">{{settings['attorney']}}</span>
-                                                    <input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                    <input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to seal the record of the above-captioned conviction
                                                 <span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602(a)(1)(C).</p>
                                             <p>1. Petitioner was convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
@@ -303,7 +303,7 @@
                                         <template v-if="filing.type != 'NoA'">
                                             <div class="filing-body__response">
                                                 <p class="no-visible" v-html="nl2br(responses[filing.id])"></p>
-                                                <textarea class="no-print" v-model="responses[filing.id]" placeholder="Type here..."></textarea>
+                                                <textarea class="no-print filingsID" v-model="responses[filing.id]" placeholder="Type here..."></textarea>
                                             </div>
                                         </template>
 
@@ -324,11 +324,11 @@
                                                         <template v-else>
                                                             <p class="filing-closing__name">
                                                                 <span class="no-visible">{{settings['attorney']}}</span>
-                                                                <input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                                <input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                             </p>
 
                                                             <p class="no-visible filing-closing__petitioner-address" v-html="nl2br(settings['attorneyAddress'])"></p>
-                                                            <textarea class="no-print" v-model="settings['attorneyAddress']" placeholder="Attorney Address"></textarea>
+                                                            <textarea class="no-print attorneyAddressValue" v-model="settings['attorneyAddress']" placeholder="Attorney Address"></textarea>
 
                                                         </template>
 
@@ -355,25 +355,25 @@
                                                                     Petitioner's Address &amp; Phone Number:</p>
                                                                 <p class="filing-closing__petitioner-address" v-html="petitioner.address"></p>
                                                                 <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span>
-                                                                    <input id="no-print_phone" v-model="responses['phone']" placeholder="Petitioner Phone Number">
-                                                                    <!-- <input class="no-print" v-model="responses['phone']" placeholder="Petitioner Phone Number"> -->
+                                                                    <!-- <input id="no-print_phone" v-model="responses['phone']" placeholder="Petitioner Phone Number"> -->
+                                                                    <input class="no-print printValue" v-model="responses['phone']" placeholder="Petitioner Phone Number">
                                                                 </p>
                                                             </div>
                                                         </template>
                                                         <template v-else>
                                                             <p class="filing-closing__name">
                                                                 <span class="no-visible">{{settings['attorney']}}</span>
-                                                                <input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
+                                                                <input class="no-print attorneyNameValue" v-model="settings['attorney']" placeholder="Attorney Name">
                                                             </p>
                                                             <div class="filing-closing__contact-box">
                                                                 <p class="filing-closing__contact-box-title bold">
                                                                     Attorney's Address &amp; Phone Number:</p>
 
                                                                 <p class="no-visible filing-closing__petitioner-address" v-html="nl2br(settings['attorneyAddress'])"></p>
-                                                                <textarea class="no-print" v-model="settings['attorneyAddress']" placeholder="Attorney Address"></textarea>
+                                                                <textarea class="no-print attorneyAddressValue" v-model="settings['attorneyAddress']" placeholder="Attorney Address"></textarea>
 
                                                                 <p class="filing-closing__phone">Phone: <span class="no-visible">{{settings['attorneyPhone']}}</span>
-                                                                    <input class="no-print" v-model="settings['attorneyPhone']" placeholder="Attorney Phone Number">
+                                                                    <input class="no-print printValue" v-model="settings['attorneyPhone']" placeholder="Attorney Phone Number">
                                                                 </p>
                                                             </div>
                                                         </template>
