--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -63,8 +63,12 @@
                             <section class="extra-documents-top" id="extra-documents">
 
                                 <!-- Clinic Checkout Sheet -->
-
                                 <article class="page" id="clinic-checkout">
+                                    <div class="document-meta-data no-print">
+                                        <p class="document-meta-data__title">Cover Letter</p>
+                                        <p class="document-meta-data__body">{{numCountsToExpungeOrSeal}} counts to file, {{numCountsNoAction}} counts with no action taken
+                                        </p>
+                                    </div>
                                     <div class="filing-document">
                                         <div class="filing-body">
                                             <div class="title petition__title"></div>
@@ -80,6 +84,7 @@
                                                 </p>
                                             </p>
                                             <br>
+                                            <p><b>&emsp;&emsp;Re: Expungement/Sealing Summary</b></p>
                                             <br>
                                             <p>{{petitioner.name}}:</p>
                                             <p>Thank you for attending todays clinic.</p>
@@ -95,6 +100,11 @@
                                 <!-- Client Checkout Sheet -->
 
                                 <article class="page" id="client-checkout">
+                                    <div class="document-meta-data no-print">
+                                        <p class="document-meta-data__title">Checkout Sheet</p>
+                                        <p class="document-meta-data__body">{{numCountsToExpungeOrSeal}} counts to file, {{numCountsNoAction}} counts with no action taken
+                                        </p>
+                                    </div>
                                     <div class="filing-document">
                                         <div class="filing__title">Client Checkout Sheet</div>
                                         <p v-if="settings.proSe" class="pro-se">You are asking the court to clear your record without any more help from an attorney. You will have to respond to the court and the State on your own when asked to do so.</p>
