cover letter and checkout edits, remove no filing option

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -97,8 +97,7 @@
                         </div>
                         <div class="card-header__select">
                             <select class="form-control form-control-sm" v-model="count.filingType" class="petitionSelect selectpicker">
-                                <option value="">No Filing</option>
-                                <option value="X">Ineligible</option>
+                                <option value="X">No Filing</option>
                                 <option value="ExC">Expunge Conviction</option>
                                 <option value="ExNC">Expunge Non-Conviction</option>
                                 <option value="ExNCrim">Expunge Non-Criminal</option>
