--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -53,6 +53,7 @@
             <filing-nav v-bind:filings="filings"></filing-nav>
 
             <table class="extra-pages">
+                
                 <tbody>
                     <tr>
                         
@@ -88,13 +89,21 @@
                                             <p><b>&emsp;&emsp;Re: Expungement/Sealing Summary</b></p>
                                             <br>
                                             <p>{{petitioner.name}}:</p>
-                                            <p>Thank you for attending todays clinic.</p>
+                                            <p>Thank you for meeting regarding your sealing and expungement needs. We have prepared the following document(s) for you today:</p>
+                                            <ul> 
+                                                <li>Clinic Checkout Sheet (summarizing all activity)</li>
+                                                <span v-for="group in filings" v-bind:id="group.county">
+                                                    <li>{{group.filings.length - 1}} petition for {{group.county}} county</li> 
+                                                </span>
+                                            </ul>
+                                            <p>The information describes our efforts to clear your record today. This includes information about records you can try to clear now and records that have to wait. We can't be sure that your entire criminal record is listed here. Contact Legal Aid at (800) 889-2047 if you have questions.</p>
+                                            <p v-if="settings.proSe"><b>You are asking the court to clear your record without any more help from an attorney. You will have to respond to the court and the State on your own when asked to do so.</b></p>
+                                            <p>Please feel free to get in touch if you have any questions.</p>
                                             <p>Sincerely,</p>
                                             <p>{{settings['attorney']}}</p>
-                                            <p class="footer-input">
-                                                <input class="no-print" v-model="settings['footer1']" placeholder="- Code for BTV -"></input>
-                                                <input class="no-print" v-model="settings['footer2']" placeholder="- Code for BTV -"></input>
-                                            </p>
+                                            <input class="no-print footer__input" v-model="settings['footer1']" placeholder="- Code for BTV -"></input>
+                                            <br>
+                                            <input class="no-print footer__input" v-model="settings['footer2']" placeholder="- Code for BTV -"></input>
                                         </div>
                                     </div>
                                 </article>
@@ -111,27 +120,30 @@
                                     </div>
                                     <div class="filing-document">
                                         <div class="filing__title">Client Checkout Sheet</div>
-                                        <p v-if="settings.proSe" class="pro-se">You are asking the court to clear your record without any more help from an attorney. You will have to respond to the court and the State on your own when asked to do so.</p>
                                         <div class="filing-body">
                                             <div class="title petition__title"></div>
                                             <div class="client-checkout-header filing-header">
                                                 <div class="client-checkout-header-left filing-header__half">
-                                                    <h1>Filings for {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}})
-                                                    </h1>
+                                                    Filings for {{petitioner.name}}
+                                                    <br>
+                                                    (DOB: {{petitioner.dob | dateFormatSimple}})
+                                                    <br>
+                                                    <span v-if="responses['phone'] !=''" class="filing-closing__phone">Phone: {{responses['phone']}}
+                                                    </span>
                                                 </div>
-                                                <div>
-                                                    <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span>
-                                                        <input class="no-print" v-model="responses['phone']" placeholder="Petitioner Phone Number">
+                                                <div class="client-checkout-header-right">
+                                                    <p v-if="numCountsStipulated > 0"><span><i
+                                                        class="fas fa-handshake"></i>&nbsp;</span>This symbol means that the State stipulated or agreed to expungement or sealing of the count. This does not necessarily mean the court will agree.
                                                     </p>
-                                                </div>
-                                            </div>  
+                                                </div>  
+                                            </div>
                                             <dl>
                                                 <table class="table summary-table">
                                                     <col width="300">
                                                         <thead class="">
                                                             <th scope="col">Desc.</th>
                                                             <th scope="col" Colspan="2">Disposition</th>
-                                                            <th scope="col">Docket Number</th>
+                                                            <th scope="col">Docket #</th>
                                                         </thead>
                                                         <tbody>
                                                             <th scope="col" Colspan="3" v-if="countsExpungedC.length > 0">
@@ -191,7 +203,7 @@
                                                                 </td>
                                                             </tr>
                                                             <th scope="col" Colspan="3" v-if="ineligible.length > 0">
-                                                                INELIGIBLE counts...</th>
+                                                                No action taken...</th>
                                                             <tr v-for="filing in ineligible">
                                                                 <td><span v-if="isStipulated(filing.filingType)"><i
                                                                     class="fas fa-handshake"></i>&nbsp;</span>{{filing.description}}
@@ -224,7 +236,7 @@
                 </tfoot>
             </table>
 
-            <table class="all-filings">
+            <table v-if="filings.length != 0" class="all-filings">
                 <tbody>
                     <tr>
                         <td>
